Dark Mode Bug FIXED

--- a/styles/header.css
+++ b/styles/header.css
@@ -19,8 +19,10 @@
 }
 
 .char {
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
+    background-color: white;
+    border-radius: 25px;
     transition: transform 5s;
 }
 
