--- a/styles/search-results.css
+++ b/styles/search-results.css
@@ -16,7 +16,7 @@
 }
 
 .title-container {
-    width: 300px;
+    width: 350px;
     display: flex;
     justify-content: space-around;
 }
